create main page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Homes</title>
-<script defer src="./script/main.20a3812db93069573286.js"></script><link href="./style/main.5b41e34e73b5b7eded6f.css" rel="stylesheet"></head>
+    <link href="./style/main.5b41e34e73b5b7eded6f.css" rel="stylesheet">
+    <script defer src="./script/main.20a3812db93069573286.js"></script>
+</head>
 <body>
     <header class="header">
         <div class="container">
