--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Homes</title>
-    <link href="./style/main.5b41e34e73b5b7eded6f.css" rel="stylesheet">
-    <script defer src="./script/main.20a3812db93069573286.js"></script>
-</head>
+<script defer src="./script/main.9bd4ab992496d9ed3305.js"></script><link href="./style/main.299abc069e5809ebe2a4.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -95,37 +93,47 @@
                         </ul>
                         <ul class="header-currency">
                             <li class="header-currency__item header-currency__item_active">
-                                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M6 0C2.68652 0 0 2.68652 0 6C0 9.31348 2.68652 12 6 12C9.31348 12 12 9.31348 12 6C12 2.68652 9.31348 0 6 0ZM6 11.25C3.10547 11.25 0.75 8.89453 0.75 6C0.75 3.10547 3.10547 0.75 6 0.75C8.89453 0.75 11.25 3.10547 11.25 6C11.25 8.89453 8.89453 11.25 6 11.25ZM7.86473 6.23072C8.00759 6.47243 8.07933 6.75441 8.07933 7.0774C8.07933 7.57324 7.93139 7.98633 7.63622 8.31666C7.34105 8.64771 6.91481 8.84255 6.35742 8.90114V9.75H5.64696V8.90552C4.71752 8.81032 4.14255 8.26978 3.92065 7.28541L5.01928 6.99902C5.12109 7.61791 5.45801 7.92701 6.03002 7.92701C6.29735 7.92701 6.49512 7.8611 6.62109 7.72852C6.74707 7.59593 6.81005 7.43627 6.81005 7.24877C6.81005 7.05469 6.74705 6.90745 6.62109 6.80784C6.49512 6.70753 6.21459 6.58078 5.78027 6.42698C5.3899 6.29152 5.08446 6.15818 4.86473 6.02491C4.64501 5.89308 4.4663 5.70778 4.32933 5.46973C4.19236 5.23095 4.12352 4.95262 4.12352 4.63622C4.12352 4.22093 4.24657 3.84666 4.49121 3.51415C4.73585 3.18237 5.12109 2.97947 5.64698 2.9055V2.25H6.35745V2.90552C7.15139 3.00075 7.66556 3.44972 7.89919 4.25318L6.92067 4.65455C6.72952 4.10377 6.43505 3.82837 6.03518 3.82837C5.83448 3.82837 5.67335 3.8899 5.55251 4.01295C5.43091 4.13599 5.37014 4.28541 5.37014 4.46046C5.37014 4.63917 5.42873 4.77614 5.54592 4.87209C5.66238 4.96732 5.91361 5.08523 6.2974 5.22659C6.71927 5.38041 7.05033 5.52614 7.28984 5.66311C7.53002 5.80006 7.7212 5.98976 7.86473 6.23072Z" fill="#fff"/>
-                                </svg>
+                                <button>
+                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M6 0C2.68652 0 0 2.68652 0 6C0 9.31348 2.68652 12 6 12C9.31348 12 12 9.31348 12 6C12 2.68652 9.31348 0 6 0ZM6 11.25C3.10547 11.25 0.75 8.89453 0.75 6C0.75 3.10547 3.10547 0.75 6 0.75C8.89453 0.75 11.25 3.10547 11.25 6C11.25 8.89453 8.89453 11.25 6 11.25ZM7.86473 6.23072C8.00759 6.47243 8.07933 6.75441 8.07933 7.0774C8.07933 7.57324 7.93139 7.98633 7.63622 8.31666C7.34105 8.64771 6.91481 8.84255 6.35742 8.90114V9.75H5.64696V8.90552C4.71752 8.81032 4.14255 8.26978 3.92065 7.28541L5.01928 6.99902C5.12109 7.61791 5.45801 7.92701 6.03002 7.92701C6.29735 7.92701 6.49512 7.8611 6.62109 7.72852C6.74707 7.59593 6.81005 7.43627 6.81005 7.24877C6.81005 7.05469 6.74705 6.90745 6.62109 6.80784C6.49512 6.70753 6.21459 6.58078 5.78027 6.42698C5.3899 6.29152 5.08446 6.15818 4.86473 6.02491C4.64501 5.89308 4.4663 5.70778 4.32933 5.46973C4.19236 5.23095 4.12352 4.95262 4.12352 4.63622C4.12352 4.22093 4.24657 3.84666 4.49121 3.51415C4.73585 3.18237 5.12109 2.97947 5.64698 2.9055V2.25H6.35745V2.90552C7.15139 3.00075 7.66556 3.44972 7.89919 4.25318L6.92067 4.65455C6.72952 4.10377 6.43505 3.82837 6.03518 3.82837C5.83448 3.82837 5.67335 3.8899 5.55251 4.01295C5.43091 4.13599 5.37014 4.28541 5.37014 4.46046C5.37014 4.63917 5.42873 4.77614 5.54592 4.87209C5.66238 4.96732 5.91361 5.08523 6.2974 5.22659C6.71927 5.38041 7.05033 5.52614 7.28984 5.66311C7.53002 5.80006 7.7212 5.98976 7.86473 6.23072Z" fill="#fff"/>
+                                    </svg>
+                                </button>
                             </li>
                             <li class="header-currency__item">
-                                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M6 0C2.68615 0 0 2.68615 0 6C0 9.31385 2.68615 12 6 12C9.31385 12 12 9.31385 12 6C12 2.68615 9.31385 0 6 0ZM6 11.0625C3.20398 11.0625 0.9375 8.79602 0.9375 6C0.9375 3.20398 3.20398 0.9375 6 0.9375C8.79602 0.9375 11.0625 3.20398 11.0625 6C11.0625 8.79602 8.79602 11.0625 6 11.0625Z" fill="white"/>
-                                    <path d="M6.50904 9C5.69679 9 4.96472 8.67811 4.49121 8.08045C4.20555 7.7498 4.00929 7.30298 3.92871 6.75916H3.35742V6.20508H3.85767C3.85767 6.16041 3.85767 6.11646 3.85767 6.07104C3.85767 5.9553 3.86646 5.83922 3.87525 5.74109H3.35742V5.18775H3.9558C4.06273 4.63404 4.30406 4.17848 4.62523 3.83058C5.10717 3.30359 5.75904 3 6.55444 3C7.08984 3 7.53661 3.13404 7.83033 3.27684L7.60767 4.09826C7.3755 3.98217 7.01002 3.86609 6.60792 3.86609C6.16116 3.86609 5.76858 4.02684 5.47343 4.35717C5.28666 4.55346 5.15262 4.84791 5.08085 5.18775H7.41945V5.74109H4.97351C4.95555 5.83924 4.95555 5.94654 4.95555 6.06262C4.95555 6.11646 4.95555 6.15197 4.95555 6.20508H7.41942V6.75916H5.05371C5.11671 7.13379 5.25038 7.42896 5.4375 7.62525C5.74146 7.95558 6.16992 8.10755 6.63427 8.10755C7.07149 8.10755 7.48242 7.95558 7.68823 7.84863L7.875 8.6433C7.58058 8.82129 7.08105 9 6.50904 9Z" fill="white"/>
-                                </svg>
+                                <button>
+                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M6 0C2.68615 0 0 2.68615 0 6C0 9.31385 2.68615 12 6 12C9.31385 12 12 9.31385 12 6C12 2.68615 9.31385 0 6 0ZM6 11.0625C3.20398 11.0625 0.9375 8.79602 0.9375 6C0.9375 3.20398 3.20398 0.9375 6 0.9375C8.79602 0.9375 11.0625 3.20398 11.0625 6C11.0625 8.79602 8.79602 11.0625 6 11.0625Z" fill="white"/>
+                                        <path d="M6.50904 9C5.69679 9 4.96472 8.67811 4.49121 8.08045C4.20555 7.7498 4.00929 7.30298 3.92871 6.75916H3.35742V6.20508H3.85767C3.85767 6.16041 3.85767 6.11646 3.85767 6.07104C3.85767 5.9553 3.86646 5.83922 3.87525 5.74109H3.35742V5.18775H3.9558C4.06273 4.63404 4.30406 4.17848 4.62523 3.83058C5.10717 3.30359 5.75904 3 6.55444 3C7.08984 3 7.53661 3.13404 7.83033 3.27684L7.60767 4.09826C7.3755 3.98217 7.01002 3.86609 6.60792 3.86609C6.16116 3.86609 5.76858 4.02684 5.47343 4.35717C5.28666 4.55346 5.15262 4.84791 5.08085 5.18775H7.41945V5.74109H4.97351C4.95555 5.83924 4.95555 5.94654 4.95555 6.06262C4.95555 6.11646 4.95555 6.15197 4.95555 6.20508H7.41942V6.75916H5.05371C5.11671 7.13379 5.25038 7.42896 5.4375 7.62525C5.74146 7.95558 6.16992 8.10755 6.63427 8.10755C7.07149 8.10755 7.48242 7.95558 7.68823 7.84863L7.875 8.6433C7.58058 8.82129 7.08105 9 6.50904 9Z" fill="white"/>
+                                    </svg>
+                                </button>
                             </li>
                             <li class="header-currency__item">
-                                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M6.62133 6.85714C7.7591 6.85714 8.55469 6.06083 8.55469 4.91613C8.55469 3.77143 7.7591 3 6.62133 3H4.43774C4.34916 3 4.27734 3.07196 4.27734 3.16071V5.92811H3.58228C3.49369 5.92811 3.42188 6.00007 3.42188 6.08882V6.69643C3.42188 6.78518 3.49369 6.85714 3.58228 6.85714H4.27734V7.28571H3.58228C3.49369 7.28571 3.42188 7.35767 3.42188 7.44643V7.98214C3.42188 8.0709 3.49369 8.14286 3.58228 8.14286H4.27734V8.83929C4.27734 8.92804 4.34916 9 4.43774 9H5.2205C5.30908 9 5.3809 8.92804 5.3809 8.83929V8.14286H7.53882C7.6274 8.14286 7.69922 8.0709 7.69922 7.98214V7.44643C7.69922 7.35767 7.6274 7.28571 7.53882 7.28571H5.3809V6.85714H6.62133ZM5.3809 3.92073H6.43313C7.05762 3.92073 7.43402 4.3106 7.43402 4.91613C7.43402 5.52995 7.05762 5.92811 6.41602 5.92811H5.3809V3.92073Z" fill="white"/>
-                                    <path d="M6 0C2.68652 0 0 2.68652 0 6C0 9.31348 2.68652 12 6 12C9.31348 12 12 9.31348 12 6C12 2.68652 9.31348 0 6 0ZM6 11.25C3.10547 11.25 0.75 8.89453 0.75 6C0.75 3.10547 3.10547 0.75 6 0.75C8.89453 0.75 11.25 3.10547 11.25 6C11.25 8.89453 8.89453 11.25 6 11.25Z" fill="white"/>
-                                </svg>
+                                <button>
+                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M6.62133 6.85714C7.7591 6.85714 8.55469 6.06083 8.55469 4.91613C8.55469 3.77143 7.7591 3 6.62133 3H4.43774C4.34916 3 4.27734 3.07196 4.27734 3.16071V5.92811H3.58228C3.49369 5.92811 3.42188 6.00007 3.42188 6.08882V6.69643C3.42188 6.78518 3.49369 6.85714 3.58228 6.85714H4.27734V7.28571H3.58228C3.49369 7.28571 3.42188 7.35767 3.42188 7.44643V7.98214C3.42188 8.0709 3.49369 8.14286 3.58228 8.14286H4.27734V8.83929C4.27734 8.92804 4.34916 9 4.43774 9H5.2205C5.30908 9 5.3809 8.92804 5.3809 8.83929V8.14286H7.53882C7.6274 8.14286 7.69922 8.0709 7.69922 7.98214V7.44643C7.69922 7.35767 7.6274 7.28571 7.53882 7.28571H5.3809V6.85714H6.62133ZM5.3809 3.92073H6.43313C7.05762 3.92073 7.43402 4.3106 7.43402 4.91613C7.43402 5.52995 7.05762 5.92811 6.41602 5.92811H5.3809V3.92073Z" fill="white"/>
+                                        <path d="M6 0C2.68652 0 0 2.68652 0 6C0 9.31348 2.68652 12 6 12C9.31348 12 12 9.31348 12 6C12 2.68652 9.31348 0 6 0ZM6 11.25C3.10547 11.25 0.75 8.89453 0.75 6C0.75 3.10547 3.10547 0.75 6 0.75C8.89453 0.75 11.25 3.10547 11.25 6C11.25 8.89453 8.89453 11.25 6 11.25Z" fill="white"/>
+                                    </svg>
+                                </button>
                             </li>
                         </ul>
                         <ul class="header__langs">
                             <li>
-                                <svg width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M3.5 10V2H6.25C6.84674 2 7.41903 2.23705 7.84099 2.65901C8.26295 3.08097 8.5 3.65326 8.5 4.25C8.5 4.84674 8.26295 5.41903 7.84099 5.84099C7.41903 6.26295 6.84674 6.5 6.25 6.5H3.5" stroke="#EF7C27" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M6 6.5L8.5 10" stroke="#EF7C27" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M15 2V7.5C15 8.16304 15.2634 8.79893 15.7322 9.26777C16.2011 9.73661 16.837 10 17.5 10H18.5C19.163 10 19.7989 9.73661 20.2678 9.26777C20.7366 8.79893 21 8.16304 21 7.5V2" stroke="#EF7C27" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
+                                <button>
+                                    <svg width="41" height="20" viewBox="0 0 41 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M5.86328 16.6673V3.33398H10.4695C11.4691 3.33398 12.4277 3.72907 13.1344 4.43233C13.8412 5.1356 14.2383 6.08942 14.2383 7.08398C14.2383 8.07855 13.8412 9.03237 13.1344 9.73563C12.4277 10.4389 11.4691 10.834 10.4695 10.834H5.86328" stroke="#EF7C27" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M10.0508 10.834L14.2383 16.6673" stroke="#EF7C27" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M25.125 3.33398V12.5007C25.125 13.6057 25.5662 14.6655 26.3515 15.4469C27.1368 16.2283 28.2019 16.6673 29.3125 16.6673H30.9875C32.0981 16.6673 33.1632 16.2283 33.9485 15.4469C34.7338 14.6655 35.175 13.6057 35.175 12.5007V3.33398" stroke="#EF7C27" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </button>
                             </li>
                             <li>
-                                <svg width="16" height="8" viewBox="0 0 16 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M5.66732 1.33398H2.33398V6.66732H5.66732" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M2.33398 4H5.00065" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M10.334 6.66732V1.33398L13.6673 6.66732V1.33398" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
+                                <button>
+                                    <svg width="27" height="14" viewBox="0 0 27 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M9.69271 2.22266H4.10938V11.1115H9.69271" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M4.10938 6.66602H8.57604" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M17.5078 11.1115V2.22266L23.0911 11.1115V2.22266" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </button>
                             </li>
                         </ul>
                         <a href="#" class="header-favorites">
@@ -433,7 +441,7 @@
     <div class="main-bg">
         <picture><source srcset="img/backgrounds/main-bg.webp" type="image/webp"> <img src="img/backgrounds/main-bg.png" alt="background"> </picture>
     </div>
-    <main class="main">
+    <main>
         <section class="search">
             <div class="container">
                 <h1 class="search__title">
