--- a/onlineViewing.html
+++ b/onlineViewing.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>О нас</title>
-<script defer src="./script/about.6ca6257507f00aa0d9bd.js"></script><link href="./style/about.f36fa82979f26335abcf.css" rel="stylesheet"></head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Онлайн просмотр</title>
+<script defer src="./script/onlineViewing.6ca6257507f00aa0d9bd.js"></script><link href="./style/onlineViewing.9e0f0eabf78022917018.css" rel="stylesheet"></head>
 <body>
-    <header class="header">
+<header class="header">
     <div class="container">
         <div class="header__inner">
             <a href="#" class="header__logo">
@@ -533,186 +533,101 @@
     </div>
 </header>
     <main>
-        <section class="banner-top banner-top_about">
+        <section class="banner-top banner-top_online-view">
             <div class="container">
                 <h1 class="banner-top__title">
-                    о нас
+                    online просмотр
                     <picture><source srcset="img/banner-top/name.webp" type="image/webp"> <img src="img/banner-top/name.png" alt="name"> </picture>
                 </h1>
             </div>
         </section>
-        <section class="company-start">
+        <section class="online-viewing">
             <div class="container">
                 <ul class="breadcrumbs">
                     <li>
                         <a href="#" class="breadcrumbs__link">Главная</a>
                     </li>
-                    <li>О нас</li>
+                    <li>
+                        <a href="#" class="breadcrumbs__link">Услуги</a>
+                    </li>
+                    <li>Online просмотр</li>
                 </ul>
-                <h2 class="title company-start__title">
-                    Как все начиналось
-                </h2>
-                <div class="company-start__inner">
-                    <p class="text text_gray">
-                        Наша компания существует на турецком рынке более 10 лет. Сначала мы только строили. Так, под нашим руководством построено два жилых комплекса в Кестеле и виллы в Бекташе.
-                    </p>
-                    <p class="text text_gray">
-                        Мы всегда ставили интересы клиентов и партнеров высоко и поддерживали кристальную репутацию. Качество строительства, продуманность планировок, забота о комфорте будущих жильцов – вот что всегда отличало наши проекты.
-                    </p>
-                    <p class="text text_gray">
-                        И наши многочисленные клиенты стали все чаще просить нас создать многопрофильную компанию, чтобы мы могли помогать им в самых разных аспектах касательно недвижимости в Турции. Ведь мы вызвали у наших клиентов доверие как застройщик. Значит, нам можно доверить и подбор недвижимости под инвестиции или покупку земельного участка.
-                    </p>
-                    <p class="text text_gray">
-                        Так в результате мы открыли агентство недвижимости «Project Home» с самым разным спектром услуг.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="lighthouse">
-            <div class="container">
-                <h2 class="lighthouse__title">
-                    АГЕНТСТВО «PROJECT HOME» – ВАШ МАЯК В ОКЕАНЕ НЕДВИЖИМОСТИ
-                </h2>
-            </div>
-        </section>
-        <section class="our-help">
-            <div class="container">
-                <div class="our-help__inner">
-                    <div class="our-help__img">
-                        <picture><source srcset="img/our-help/1.webp" type="image/webp"> <img src="img/our-help/1.jpg" alt="image"> </picture>
-                    </div>
-                    <h2 class="title our-help__title">
-                        Как мы можем вам помочь:
-                    </h2>
-                    <ul class="our-help__list">
-                        <li>
-                            Мы подберем вам недвижимость, которая идеально подходит для инвестирования.
-                        </li>
-                        <li>
-                            Мы помогаем купить земельный участок, а также покупать и продавать недвижимость в разных регионах Турции. Все подбираем вдумчиво, грамотно и следуем за желаниями клиента: с нами комфортно и безопасно.
-                        </li>
-                        <li>
-                            Мы продолжаем строить новые дома, которые так нравятся нашим клиентам.
-                        </li>
-                        <li>
-                            Мы внимательно проверяем все документы, чтобы клиенты получали недвижимость с «чистым» свидетельством о собственности и без обременений.
-                        </li>
-                        <li>
-                            Наши сотрудники сопровождают сделку на всех этапах. Надо ли говорить, что наша команда — это проверенные и компетентные турецкие специалисты?
-                        </li>
-                        <li>
-                            Мы помогаем сдавать недвижимость в аренду: подберем клиентов, составим договор. Можно на краткий срок, можно на долгий.
-                        </li>
-                        <li>
-                            Мы организовываем индивидуальный трансфер.
-                        </li>
-                        <li class="our-help-sublist">
-                            У нас детальное постпродажное сопровождение. Это значит, что мы помогаем нашим клиентам полностью обслуживать квартиру и оформлять документы после покупки:
-                            <ul class="our-help-sublist__item">
-                                <li>
-                                    Откроем вам счет в турецком банке;
-                                </li>
-                                <li>
-                                    Поможем подать документы на ВНЖ и турецкое гражданство;
-                                </li>
-                                <li>
-                                    Подскажем, как оформить ИП в Турции;
-                                </li>
-                                <li>
-                                    Вызовем мастеров клининга в вашу квартиру перед вашим приездом;
-                                </li>
-                                <li>
-                                    Найдем дизайнеров для вашего дома;
-                                </li>
-                                <li>
-                                    Расскажем, как устроить ребенка в турецкую школу;
-                                </li>
-                                <li>
-                                    Объясним, как добраться до другого города;
-                                </li>
-                                <li>
-                                    Составим список магазинов;
-                                </li>
-                                <li>
-                                    И многое другое!
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section class="why-we">
-            <div class="container">
-                <div class="why-we__inner">
-                    <div class="why-we__item">
-                        <div class="why-we__img">
-                            <picture><source srcset="img/why-we/1.webp" type="image/webp"> <img src="img/why-we/1.jpg" alt="image"> </picture>
-                        </div>
-                        <div class="why-we__info">
-                            <h2 class="why-we__title">
-                                Почему мы?
-                            </h2>
-                            <p class="why-we__text">
-                                У нас широкий выбор и уникальные предложения от застройщиков и собственников. Удобные квартиры с восхитительными видами, пентхаусы с гениальной планировкой, отдельные люксовые виллы, домики от собственников у подножия живописных гор, современные апартаменты в стиле хай-тек – вы найдете у нас все, чего бы вы ни захотели.
-                            </p>
-                            <p class="why-we__text">
-                                В агентстве «Project Home» очень внимательно относятся к постпродажному сервису. Ведь многие наши клиенты поначалу не понимают по-турецки и плохо ориентируются в городе, где купили недвижимость. Поэтому мы становимся прочным мостиком между ними и их новой прекрасной жизнью в солнечной Турции.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="why-we__item why-we__item_reverse">
-                        <div class="why-we__img">
-                            <picture><source srcset="img/why-we/2.webp" type="image/webp"> <img src="img/why-we/2.jpg" alt="image"> </picture>
-                        </div>
-                        <div class="why-we__info">
-                            <p class="why-we__text">
-                                Если вы покупаете у нас недвижимость, мы вам предоставляем любые консультации насчет обустройства квартиры и адаптации за рубежом в принципе. Можно сказать, что наши менеджеры становятся вашими личными помощниками, которые отвечают вам круглосуточно.
-                            </p>
-                            <p class="why-we__text">
-                                Мы хорошо знаем, что продаем, и не посоветуем вам того, что не купили бы сами. Никаких умолчаний, никаких мутных схем – все безупречно и по высшему разряду. Наши сотрудники всегда подскажут вам, какой вариант хорош, а какой – не очень.
-                            </p>
-                            <p class="why-we__text">
-                                Для нас важно понимание и дружелюбие в общении с клиентами. Безусловно, это деловое общение, но оно всегда исключительно приятно.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="why-we__item">
-                        <div class="why-we__img">
-                            <picture><source srcset="img/why-we/3.webp" type="image/webp"> <img src="img/why-we/3.jpg" alt="image"> </picture>
-                        </div>
-                        <div class="why-we__info">
-                            <p class="why-we__text">
-                                Топ-менеджеры ищут для вас эксклюзивные варианты, договариваются с бизнес-партнерами о специальных скидках и подарках для вас.
-                            </p>
-                            <p class="why-we__text">
-                                Мы работаем с клиентами по всему миру, но особенно часто – с гражданами России, Украины, Беларуси и Казахстана. Важный момент: никакого языкового барьера – вам не надо будет формулировать свои пожелания на английском или другом неродном языке.
-                            </p>
-                            <p class="why-we__text">
-                                Нам искренне нравится наша работа, мы преданы своему делу. И почтем за честь помочь вам тоже полюбить светлую, гостеприимную Турцию с ее теплым морем и розовыми цветами бугенвиллии.
-                            </p>
-                            <button class="button button_opposite why-we__button">оставить заявку</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="appeal">
-            <div class="container">
-                <div class="appeal__inner">
-                    <div class="appeal__info">
-                        <h2 class="title appeal__title">
-                            Обращайтесь<br> в агентство «PROJECT HOME»!
-                        </h2>
-                        <p class="text text_gray">
-                            Мы поможем вам заключить грамотную и выгодную сделку и проконсультируем насчет продажи и покупки турецкой недвижимости.
+                <div class="online-viewing__inner">
+                    <div class="online-viewing__texts">
+                        <p>
+                            С агентством недвижимости «Project Home» вы можете посмотреть полюбившуюся вам квартиру онлайн.
                         </p>
-                        <p class="text text_gray">
-                            Если вы ищете дом мечты, то мы подберем для вас наилучшие варианты, чтобы вы смогли приобрести идеальную для вас виллу или квартиру.
+                        <p>
+                            Наши менеджеры свяжутся с вами и в видео покажут выбранные апартаменты или виллу во всех деталях. Вы сможете полюбоваться видом из окна, виртуально посетить каждую комнату, заглянуть в ящички кухонного гарнитура, осмотреться на территории комплекса.
                         </p>
                     </div>
-                    <div class="appeal__img">
-                        <picture><source srcset="img/appeal/1.webp" type="image/webp"> <img src="img/appeal/1.jpg" alt="image"> </picture>
+                    <div class="online-viewing__img">
+                        <picture><source srcset="img/online-viewing/1.webp" type="image/webp"> <img src="img/online-viewing/1.jpg" alt="image"> </picture>
+                    </div>
+                    <div class="online-viewing__texts">
+                        <p>
+                            С агентством недвижимости «Project Home» вы можете посмотреть полюбившуюся вам квартиру онлайн.
+                        </p>
+                        <p>
+                            Наши менеджеры свяжутся с вами и в видео покажут выбранные апартаменты или виллу во всех деталях. Вы сможете полюбоваться видом из окна, виртуально посетить каждую комнату, заглянуть в ящички кухонного гарнитура, осмотреться на территории комплекса.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="write-seller write-seller_pb">
+            <div class="container">
+                <h2 class="title write-seller__title">
+                    У вас остались вопросы по данной услуге?
+                </h2>
+                <div class="write-seller__inner">
+                    <div class="write-seller__img">
+                        <picture><source srcset="img/write-seller/image.webp" type="image/webp"> <img src="img/write-seller/image.jpg" alt="image"> </picture>
+                    </div>
+                    <div class="write-seller__info">
+                        <div class="write-seller__quest">
+                            Напишите свой вопрос и наш консультант обязательно Вам ответит
+                        </div>
+                        <form action="#" class="write-seller-form">
+                            <input placeholder="Ваше имя" name="name" aria-label="" type="text">
+                            <input placeholder="Телефон" name="phone" aria-label="" type="text">
+                            <div class="write-seller-form__radios">
+                                <div>Получить ответ в</div>
+                                <div class="write-seller-form__items">
+                                    <div class="write-seller-form-radio">
+                                        <input id="whatsapp-radio" name="mess" aria-label="" type="radio">
+                                        <label class="write-seller-form-radio__input" for="whatsapp-radio"></label>
+                                        <label class="write-seller-form-radio__text" for="whatsapp-radio">
+                                            WhatsApp
+                                        </label>
+                                    </div>
+                                    <div class="write-seller-form-radio">
+                                        <input id="viber-radio" name="mess" aria-label="" type="radio">
+                                        <label class="write-seller-form-radio__input" for="viber-radio"></label>
+                                        <label class="write-seller-form-radio__text" for="viber-radio">
+                                            Viber
+                                        </label>
+                                    </div>
+                                    <div class="write-seller-form-radio">
+                                        <input id="telegram-radio" name="mess" aria-label="" type="radio">
+                                        <label class="write-seller-form-radio__input" for="telegram-radio"></label>
+                                        <label class="write-seller-form-radio__text" for="telegram-radio">
+                                            Telegram
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <input placeholder="Электронная почта" name="mail" aria-label="" type="text">
+                            <div class="write-seller-form-radio">
+                                <input id="data-processing" name="data-processing" type="checkbox">
+                                <label class="write-seller-form-radio__input" for="data-processing"></label>
+                                <label class="write-seller-form-radio__text" for="data-processing">
+                                    Даю согласие на <a href="#">обработку персональных данных</a>
+                                </label>
+                            </div>
+                            <textarea placeholder="Сообщение" class="write-seller-form__message" aria-label="" name="message"></textarea>
+                            <button class="button">отправить</button>
+                        </form>
                     </div>
                 </div>
             </div>
