--- a/reviews.html
+++ b/reviews.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Отзывы</title>
-<script defer src="./script/reviews.9e8e9a707261d73d747f.js"></script><link href="./style/reviews.cf483d55901f267f2386.css" rel="stylesheet"></head>
+<script defer src="./script/reviews.6ca6257507f00aa0d9bd.js"></script><link href="./style/reviews.ceaa26bcadd60bc3a18a.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -854,9 +854,9 @@
                         </div>
                     </div>
                 </div>
-                <ul class="reviews-pages">
+                <ul class="pages">
                     <li>
-                        <button class="reviews-pages__arrow">
+                        <button class="pages__arrow">
                             <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.95617 5.5L11 10.1067L10.0219 11L4 5.5L10.0219 -8.55068e-08L11 0.893313L5.95617 5.5Z" fill="#107886"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.95617 5.5L7 10.1067L6.02192 11L4.80825e-07 5.5L6.02192 -8.55068e-08L7 0.893313L1.95617 5.5Z" fill="#107886"/>
@@ -864,36 +864,36 @@
                         </button>
                     </li>
                     <li>
-                        <button class="reviews-pages__arrow">
+                        <button class="pages__arrow">
                             <svg width="7" height="11" viewBox="0 0 7 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.95617 5.5L7 10.1067L6.02192 11L4.80825e-07 5.5L6.02192 -8.55068e-08L7 0.893313L1.95617 5.5Z" fill="#107886"/>
                             </svg>
                         </button>
                     </li>
                     <li>
-                        <button class="reviews-pages__item">1</button>
+                        <button class="pages__item">1</button>
                     </li>
                     <li>
-                        <button class="reviews-pages__item reviews-pages__item_active">2</button>
+                        <button class="pages__item pages__item_active">2</button>
                     </li>
                     <li>
-                        <button class="reviews-pages__item">3</button>
+                        <button class="pages__item">3</button>
                     </li>
                     <li>
-                        <button class="reviews-pages__item">...</button>
+                        <button class="pages__item">...</button>
                     </li>
                     <li>
-                        <button class="reviews-pages__item">27</button>
+                        <button class="pages__item">27</button>
                     </li>
                     <li>
-                        <button class="reviews-pages__arrow">
+                        <button class="pages__arrow">
                             <svg width="7" height="11" viewBox="0 0 7 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.04383 5.5L0 0.893313L0.978083 0L7 5.5L0.978083 11L0 10.1067L5.04383 5.5Z" fill="#107886"/>
                             </svg>
                         </button>
                     </li>
                     <li>
-                        <button class="reviews-pages__arrow">
+                        <button class="pages__arrow">
                             <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.04383 5.5L0 0.893313L0.978083 0L7 5.5L0.978083 11L0 10.1067L5.04383 5.5Z" fill="#107886"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M9.04383 5.5L4 0.893313L4.97808 0L11 5.5L4.97808 11L4 10.1067L9.04383 5.5Z" fill="#107886"/>
